--- a/eventrent-web/index.html
+++ b/eventrent-web/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="EventRent - Аренда оборудования для мероприятий в Ташкенте" />
+    <meta name="description" content="4Event - Аренда оборудования для мероприятий в Ташкенте" />
     <meta name="theme-color" content="#0ea5e9" />
-    <title>EventRent - Аренда для мероприятий</title>
+    <title>4Event - Аренда для мероприятий</title>
 
     <!-- Preconnect to fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
